#66 - fixing notifications display on mobile

--- a/src/main/resources/public/styles/ctf.less
+++ b/src/main/resources/public/styles/ctf.less
@@ -608,4 +608,8 @@ strong {
 	.small-banner {
 		background-size: 100% 50px, auto auto, 100% 300px;
 	}
+	
+	.headline .carousel-position, .headline .carousel-container, .headline .carousel {
+		height: 7em;
+	}
 }
